Fix layout problems.

--- a/voicesofyouth/user/static/css/user/users_list.scss
+++ b/voicesofyouth/user/static/css/user/users_list.scss
@@ -88,3 +88,13 @@
 .badge-global-admin {
     background-color: #00CDFC;
 }
+
+.panel-default {
+    .panel-heading {
+        background-color: transparent;
+    }
+    .panel-footer {
+        background-color: transparent;
+        border-top: transparent;
+    }
+}
